responsiv mid changes

--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/_variables.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/_variables.scss
@@ -38,6 +38,8 @@ $default-count-col: 12;
 
 $default-width: 1600px;
 
+$res-lg-padding: 60px;
+
 $breack-points: (
     "lg": 1360px,
     "md": 1024px,
