--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_hero-block.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_hero-block.scss
@@ -115,6 +115,10 @@
         letter-spacing: 8px;
         text-align: center;
         margin: 0;
+
+        @include media(md) {
+            font-size: 65px;
+        }
     }
 
     &__text {
