--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/footer/_footer.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/footer/_footer.scss
@@ -1,9 +1,7 @@
 .footer {
     padding: 185px 0;
     position: relative;
-
     background: linear-gradient(251deg, #7E5AFF -2.19%, #55B7FF 103.21%);
-
 
     &::before {
         content: "";
@@ -42,6 +40,7 @@
     border: 1px solid $color-white;
     border-radius: 50%;
     margin-left: 20px;
+    z-index: 5;
 
     &__link {
         display: flex;
