--- a/students/savchak_marharyta/exam_1/src/css/main/_why_choose_us.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_why_choose_us.scss
@@ -26,7 +26,7 @@
     }
 
     &__container {
-        padding: 100px 150px 100px 0;
+        padding: 120px 150px 120px 0;
         box-sizing: border-box;
     }
 
@@ -34,25 +34,46 @@
         padding: 20px 32px;
         background-color: $blue;
         width: 150px;
-        font-family: $btn-font;
-        z-index: -1;
         position: relative;
-    }
-
-    &__button-wrapper::before {
-        content: "";
-        background-color: $darker-blue;
-        width: 100%;
-        height: 100%;
-        position: absolute;
+        z-index: 1;
     }
 
     &__button {
         color: inherit;
+        font-family: $btn-font;
         text-decoration: none;
         text-transform: uppercase;
         letter-spacing: 1.12px;
         white-space: nowrap;
+        z-index: 100;
+        position: relative;
+    }
+
+    &__button-wrapper::before {
+        content: " ";
+        background-color: $darker-blue;
+        width: 52%;
+        height: 100%;
+        z-index: 2;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+    }
+
+    &__button-wrapper::after {
+        content: "";
+        width: 0;
+        height: 0;
+        border-left: 30px solid transparent;
+        border-top: 30px solid $blue ;
+        border-right: 30px solid $blue ;
+        border-bottom: 30px solid transparent;
+        z-index: 3;
+        position: absolute;
+        top: 0;
+        left: 27%;
+
     }
 
     &__row {
@@ -62,16 +83,14 @@
     }
 
     &__content-wrapper {
-        padding-top: 80px;
+        padding-top: 70px;
     }
-
-    &__img {}
 
     &__img-wrapper {
         display: flex;
         flex-direction: column;
         padding: 0;
-        padding-top: 15px;
+        padding-top: 6px;
         gap: 16px;
     }
 }
