--- a/students/umienchuk_oksana/project_second_monticello/src/css/_header.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_header.scss
@@ -6,11 +6,13 @@
     z-index: 100;
     padding-top: 50px;
     padding: 15px;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+    transition:
+        background-color 0.5s ease-in-out,
+        box-shadow 0.5s ease-in-out;
 
     &.bg-scroll {
-        background-color: $img-bg-first;
-        background-image: linear-gradient(to right, rgba(85, 183, 255, 1), rgba(126, 90, 255, 1));
+        // background-image: linear-gradient(to right, rgba(85, 183, 255, 1), rgba(126, 90, 255, 1));
+        background-color: #7E5AFF;
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
     }
 }
@@ -127,7 +129,7 @@
     @include media(sm) {
         background-image: linear-gradient(to right, rgba(85, 183, 255, 1), rgba(126, 90, 255, 1));
         position: fixed;
-        top: 110px;
+        top: 80px;
         gap: 50px;
         left: 0;
         right: 0;
