created desktop version

--- a/students/tiselko_iryna/exam_js-module/src/css/_extend.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/_extend.scss
@@ -17,3 +17,14 @@
     padding: 0;
     list-style-type: none;
 }
+
+%heading-pseudo {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100px;
+    height: 1px;
+    background-color: $pickled-bluewood;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
