--- a/students/tiselko_iryna/exam_js-module/src/css/_form.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/_form.scss
@@ -31,9 +31,16 @@
     }
 
     &-secondary {
-        width: 139px;
-        height: 52px;
+        width: 140px;
+        height: 50px;
         background-color: $btn-bg;
         color: $btn-text-color;
+    }
+
+    &:hover {
+        transform: scale(1.1);
+        color: $btn-hover-text-color;
+        background-image: $hero-gradient;
+        border: none;
     }
 }
