--- a/students/tiselko_iryna/exam_js-module/src/css/styles.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/styles.scss
@@ -6,6 +6,7 @@
 @import "./extend";
 @import "./mixins";
 @import "./reset";
+@import "./lightbox.scss";
 @import "./fonts";
 @import "./global";
 @import "./form";
