--- a/students/tiselko_iryna/exam_js-module/src/css/footer/_footer.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/footer/_footer.scss
@@ -1,43 +1,43 @@
 .footer {
-    padding-top: 150px;
-    padding-bottom: 155px;
     background-image: url('#{$base-img-pass}../images/footer/footer-bg.png'), linear-gradient(237deg, #24ccfa 11.16%, #3C7FD4 89.18%);
     background-repeat: no-repeat;
-    background-position: bottom center;
+    background-position: bottom;
     background-size: contain;
     position: relative;
 
-    // .footer__map
+    // .footer__map-wrapper
 
-    &__map {
-        position: absolute;
-        width: 100%;
+    &__map-wrapper{
+        width: 100vw;
         height: 700px;
-        top: 0;
-        aspect-ratio: 16/9;
-        z-index: -1;
     }
 
     // .footer__contact-form
 
     &__contact-form {
         background-color: $white-color;
+        background-image: url('../../images/footer/form-bg.png');
+        background-repeat: no-repeat;
+        background-position: bottom center;
+        background-size: contain;
         width: 770px;
         height: 450px;
+        position: absolute;
+        @extend %posfix-center;
     }
 
     // .footer__logo
 
     &__logo {
-        padding-right: 165px;
         text-align: center;
+        padding-left: 56px;
     }
 
     // .footer__socials
 
     &__socials {
-        padding-left: 165px;
         text-align: center;
+        
     }
 
     // .footer__socials-link
@@ -49,10 +49,6 @@
             padding-right: 20px;
         }
 
-        &:nth-child(2n) {
-
-        }
-
     }
 
     // .footer__scroll
@@ -60,44 +56,59 @@
     &__scroll {
         justify-self: flex-end;
     }
+
+    // .footer__container
+
+    &__container {
+        height: 549px;
+    }
+
+    // .footer__row
+
+    &__row {
+        padding-top: 203px;
+        align-items: center;
+    }
+
+    // .footer__copyright
+
+    &__copyright{
+        padding-top: 41px;
+        text-align: center;
+    }
+
+
 }
 .container {
 }
 .row {
 }
 .contact-form {
-    // @extend %posfix-center;
-    // z-index: 1000;
 
     // .contact-form__title
 
     &__title {
         position: relative;
-        padding-top: 90px;
         padding-bottom: 40px;
         text-align: center;
+        margin-top: 90px;
 
         &::before {
-            content: '';
-            display: block;
-            position: absolute;
-            width: 100px;
-            height: 1px;
-            background-color: $pickled-bluewood;
-            top: 60px;
-            right: 324px;
+            @extend %heading-pseudo;
+            top: -37%;
         }
     }
 
     // .contact-form__wrapper
 
     &__wrapper {
+        display: flex;
     }
 
     // .contact-form__contact
 
     &__contact {
-        padding-bottom: 68px;
+        padding: 0 0 68px 60px;
     }
 
     // .contact-form__contact-item
@@ -128,14 +139,30 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        padding-right: 60px;
+
+        &>input {
+            border: none;
+            border-bottom: 1px solid rgb(44, 64, 88, 0.2);
+
+            &:hover {
+                border-bottom: 1px solid $pickled-bluewood;
+            }
+
+            @include placeholder() {
+                font-family: $secondary-font;
+                color: $input-text-color;
+                padding-bottom: 14px;
+            }
+        }
+
     }
 
     // .contact-form__btn
 
     &__btn {
+        align-self: flex-end;
     }
-}
-.d-flex {
 }
 .col-6 {
 }
@@ -169,5 +196,9 @@
 }
 
 .copyright {
+    font-family: $secondary-font;
+    font-size: 14px;
+    line-height: normal;
+    color: $white-color;
 }
 
