--- a/students/tiselko_iryna/exam_js-module/src/css/header/_socials.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/header/_socials.scss
@@ -1,6 +1,6 @@
 .header-socials {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     gap: 20px;
     padding: 0;
