--- a/students/tiselko_iryna/exam_js-module/src/css/main/_about.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/main/_about.scss
@@ -1,5 +1,7 @@
 .about {
     margin-bottom: 150px;
+    position: relative;
+    width: 100vw;
 
     // .about__heading
 
@@ -10,14 +12,8 @@
         text-align: center;
 
         &::before {
-            content: '';
-            display: block;
-            position: absolute;
-            width: 100px;
-            height: 1px;
-            background-color: $pickled-bluewood;
-            top: -30px;
-            right: 605px;
+            @extend %heading-pseudo;
+            top: -20%;
         }
     }
 
@@ -25,7 +21,6 @@
 
     &__img-wrapper {
         padding-bottom: 162px;
-        position: relative;
         z-index: 100;
     }
 
@@ -42,30 +37,15 @@
         }
     }
 
-    // .about__img-shadow
-
-    &__img-shadow {
-        display: block;
-        position: absolute;
-        width: 50vw;
-        max-height: 470px;
-        
-        left: 0;
-        z-index: -10;
-        transform: translate(0, -112%);
-        overflow: hidden;
-
-        // .about__img-shadow_color
-
-        &_color {
-            background-color: $malibu;
-        }
-    }
-
     // .about__content-wrapper
 
     &__content-wrapper {
-        padding-left: 40px;
+        padding-right: 40px;
+
+        &-reverse {
+
+            padding-left: 40px;
+        }
     }
 
     // .about__suptitle
@@ -93,8 +73,6 @@
     // .about__btn
 
     &__btn {
-        text-decoration: none;
-        color: $btn-text-color;
     }
 
     // .about__subcontent
@@ -114,20 +92,36 @@
     }
 
     // .about__img-wrapper-reverse
-
-    &__img-wrapper-reverse {
-        position: relative;
+    
+    &__img-wrapper{
+        text-align: end;
 
         &::before {
             content: '';
             display: block;
             position: absolute;
-            width: 43vw;
+            width: 100%;
             height: 470px;
-            background-color: $heliotrope;;
-            top: -43px;
-            right: -311px;
+            background-color: $malibu;
+            left: -62%;
+            top: 268px;
             z-index: -10;
+        }
+    
+        &-reverse {
+            padding-left: 15px;
+
+            &::before {
+                content: '';
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 470px;
+                background-color: $heliotrope;;
+                bottom: 74px;
+                right: -64%;
+                z-index: -10;
+            }
         }
     }
 }
