--- a/students/tiselko_iryna/exam_js-module/src/css/main/_gallery.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/main/_gallery.scss
@@ -1,24 +1,87 @@
 .gallery {
-    padding-top: 180px;
-    height: 900px;
+    padding-top: 150px;
 
     // .gallery__heading
 
     &__heading {
         position: relative;
-        padding-bottom: 90px;
+        padding-bottom: 45px;
         text-align: center;
         color: $pickled-bluewood;
 
         &::before {
-            content: '';
-            display: block;
-            position: absolute;
-            width: 100px;
-            height: 1px;
-            background-color: $pickled-bluewood;
-            top: -30px;
-            right: 605px;
+            @extend %heading-pseudo;
+            top: -36%;
         }
     }
+
+    // .gallery__wrapper
+
+    &__wrapper {
+        padding-top: 45px;
+        padding-bottom: 30px;
+        display: grid;
+        justify-content: center;
+        gap: 10px;
+        grid-template-columns: repeat(auto-fit,minmax(290px, min-content));
+        grid-auto-rows: 215px;
+        grid-auto-flow: dense;
+    }
+
+    // .gallery__item
+
+    &__item {
+        display: none;
+
+        &:nth-child(1),
+        &:nth-child(2),
+        &:nth-child(3),
+        &:nth-child(4),
+        &:nth-child(5) {
+            display: block;
+        }
+
+        // &:nth-child(-n+5) {
+        //     display: block;
+        // }
+
+        &-big {
+            grid-column: span 2;
+            grid-row: span 2;
+        }
+    }
+
+    // .gallery__img
+
+    &__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        position: relative;
+    }
+
+    // .gallery__btn
+
+    &__btn {
+        margin: 5px;
+
+        
+    }
+
+    // .gallery__btn-wrapper
+
+    &__btn-wrapper {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 150px;
+        padding-top: 30px;
+    }
+
+    .hideItems {
+        display: none;
+    }
 }
+
+
+
