--- a/students/savchak_marharyta/exam_1/src/css/main/_tip.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_tip.scss
@@ -4,6 +4,7 @@
 
     &__container {
         padding: 125px 400px 60px;
+        position: relative;
     }
 
     // .tip__title
@@ -18,6 +19,8 @@
     &__img {
         width: 65px;
         padding-bottom: 15px;
+        display: block;
+        margin: 0 auto;
     }
 
     &__list {
@@ -27,19 +30,53 @@
         margin: 0 auto;
         font-family: $section-title-font;
         padding: 0;
+
     }
 
     &__item {}
 }
 
+
+.tip__list::before {
+    content: "";
+    border-left: 1px dashed transparent;
+    border-right: 1px dashed transparent;
+    border-bottom: 1px dashed transparent;
+    border-top: 1px dashed $white;
+    border-radius: 50%;
+    width: 540px;
+    height: 540px;
+    position: absolute;
+    z-index: 100;
+    top: 50px;
+    left: 460px;
+    opacity: 0.502;
+}
+
+.tip__list::after {
+    content: "";
+    border-left: 1px dashed transparent;
+    border-right: 1px dashed transparent;
+    border-bottom: 1px dashed transparent;
+    border-top: 1px dashed $white;
+    border-radius: 50%;
+    width: 540px;
+    height: 540px;
+    position: absolute;
+    z-index: 100;
+    top: 50px;
+    right: 460px;
+    opacity: 0.502;
+}
+
 .search {
-    fill: $blue;
+    color: $blue ;
 }
 
 .check-circle {
-    fill: $coral-red;
+    color: $coral-red;
 }
 
 .thumbs-up {
-    fill: $light-blue;
+    color: $light-blue;
 }
