--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
@@ -23,6 +23,14 @@
     background-color: $color-white;
     z-index: 10;
 
+    @include media(sm) {
+        position: relative;
+    }
+
+    @include media(xs) {
+        padding: 60px 0;
+    }
+
     &::after {
         content: "";
         background: url('../../images/painted-city.png') no-repeat bottom;
@@ -104,6 +112,12 @@
     }
 }
 
+.btn-continer {
+    @include media(sm) {
+        text-align: center;
+    }
+}
+
 .form-btn {
     width: 140px;
     height: 50px;
@@ -112,4 +126,8 @@
     background: transparent;
     border: 1px solid $color-steel-blue;
     float: right;
+
+    @include media(sm) {
+        float: none;
+    }
 }
