--- a/students/kukuruza_maxim/exam-1/src/css/header/_header.scss
+++ b/students/kukuruza_maxim/exam-1/src/css/header/_header.scss
@@ -48,16 +48,23 @@
 .form {
     width: 647px;
     position: relative;
+    background: #fff;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
 
     @include media(md) {
         width: 350px;
     }
 
 
-    @include media(sm) {
-        width: fit-content;
+    @include media(xxs) {
+        width: 300px;
     }
 
+    @include media(xxxs) {
+        width: fit-content;
+    }
 
     &-btn {
         display: flex;
@@ -75,11 +82,7 @@
         width: 100%;
         height: 60px;
         box-sizing: border-box !important;
-        padding: 0 150px 0 36px;
 
-        @include media(md) {
-            padding: 0 70px 0 10px;
-        }
     }
 
     &-input::placeholder {
@@ -88,20 +91,19 @@
         letter-spacing: 2.8px;
 
         @include media(md) {
-            font-size: 0.5em;
+            font-size: 13px;
         }
 
-        @include media (sm) {
+        @include media (xxs) {
             letter-spacing: 1.4px;
+            font-size: 12px;
         }
 
+        @include media (xxxs) {
+            letter-spacing: 1.4px;
+            font-size: 10px;
+        }
 
-    }
-
-    .btn-sm {
-        position: absolute;
-        top: 5px;
-        right: 4px;
     }
 
     .icon-search {
