--- a/students/dunaieva_alona/second-exam/src/css/header/_header.scss
+++ b/students/dunaieva_alona/second-exam/src/css/header/_header.scss
@@ -32,14 +32,14 @@ $menu-border-color: $border-dots;
         display: none;
         background: $gradient-bg;
         position: fixed;
-        top: 70px;
+        top: 80px;
         right: 0;
         left: 0;
         height: fit-content;
         width: 100%;
         flex-direction: column;
         gap: 25px;
-        padding: 25px;
+        padding: 25px 0 25px;
         transform: translateX(-100%);
         transition: transform 0.5s ease-in-out;
 
@@ -72,11 +72,6 @@ $menu-border-color: $border-dots;
     }
 
     &__link:hover::before {
-        background-color: $white-color;
-    }
-
-
-    &__link:focus::before {
         background-color: $white-color;
     }
 }
