fix errors in console, change script.js, add 8 img in gallery

--- a/students/dunaieva_alona/second-exam/src/css/sections/_news.scss
+++ b/students/dunaieva_alona/second-exam/src/css/sections/_news.scss
@@ -1,6 +1,6 @@
 .news {
     position: relative;
-    background: url(../../images/news-bg.png), $gradient-bg;
+    background: url(../images/news-bg.png), $gradient-bg;
     background-position: bottom center;
     background-repeat: no-repeat;
     padding-bottom: 120px;
