--- a/students/dunaieva_alona/second-exam/src/css/sections/_gallery.scss
+++ b/students/dunaieva_alona/second-exam/src/css/sections/_gallery.scss
@@ -1,6 +1,10 @@
 .gallery {
     margin-bottom: 90px;
 
+    @include media(md) {
+        margin-bottom: 40px;
+    }
+
     &__title {
         position: relative;
         display: inline-block;
@@ -25,6 +29,12 @@
         }
     }
 
+    &__link:first-child {
+        grid-column: 1 / span 2;
+        grid-row: 1 / span 2;
+
+    }
+
     &__link-img {
         height: 100%;
     }
@@ -36,10 +46,13 @@
 
 .gallery-wrapper {
     margin-bottom: 60px;
-}
-
-.gallery-wrapper-left {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
     gap: 10px;
+
+    @include media(md) {
+        margin-bottom: 40px;
+    }
+
 }
