--- a/students/umienchuk_oksana/project_second_monticello/src/css/_form.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_form.scss
@@ -1,126 +1,97 @@
-// .map {
-//     width: 100%;
-// }
+.form-section {
+    border: 1px solid blue;
+    color: #000;
+    max-width: 770px;
+    width: 100%;
+    margin: 0 auto 60px;
+    padding: 90px 60px 0 60px;
+    z-index: 10;
+    background-color: $color-white;
+    background-image: url('../images/city-form.png');
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -300px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
-// .google-map {
-//     width: 100%;
-//     height: 600px;
-//     border: 0;
-//     filter: grayscale(80%);
-// }
+    // .form__container
 
-// .get-in-touch {
-//     position: relative;
-// }
+    &__container {}
 
-// .map {
-//     width: 100%;
-//     height: 700px;
+    // .form__title
 
-//     &>iframe {
-//         width: 100%;
-//         height: 100%;
-//     }
-// }
+    &__title {
+        position: relative;
+        color: $color-night-blue;
+        text-align: center;
+        font-size: 44px;
+        font-weight: 700;
+        margin: 0 0 42px;
 
-// .form-wrapper {
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%);
-//     max-width: 770px;
-//     width: 100%;
-//     padding: 60px;
-//     background-color: $color-white;
-//     z-index: 10;
+        &::before {
+            content: '';
+            position: absolute;
+            height: 1px;
+            width: 100px;
+            background-color: $color-night-blue;
+            top: -30px;
+            left: 50%;
+            right: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 20;
+        }
+    }
+}
 
-//     &::after {
-//         content: "";
-//         background: url('../../images/painted-city.png') no-repeat bottom;
-//         background-size: contain;
-//         opacity: 0.1;
-//         position: absolute;
-//         top: 0;
-//         left: 0;
-//         width: 100%;
-//         height: 100%;
-//         pointer-events: none;
-//     }
+.info {
 
-//     &__title {
-//         color: $color-steel-blue;
-//         text-align: center;
-//         font-size: 44px;
-//         font-weight: 700;
+    // .info__items
 
-//         margin: 0;
-//         margin: 30px 0 40px;
-//         position: relative;
+    &__items {
+        list-style-type: none;
+        padding: 0;
+    }
 
-//         &::before {
-//             position: absolute;
-//             content: '';
-//             max-width: 100px;
-//             width: 100%;
-//             height: 1px;
-//             background-color: $color-steel-blue;
-//             top: -30px;
-//             left: 50%;
-//             transform: translate(-50%, -50%);
-//         }
-//     }
+    // .info__item
 
-//     &__info {}
-// }
+    &__item {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        margin-bottom: 30px;
+    }
 
-// .info {
-//     &__item {
-//         display: inline;
-//     }
-// }
+    // .info__img
 
-// .info-item {
-//     display: flex;
-//     align-items: center;
+    &__img {
+        height: 20px;
+    }
 
-//     &__image {
-//         width: 24px;
-//         height: 24px;
-//         fill: $color-purple;
-//     }
+    // .info__disc
 
-//     &__description {
-//         margin: 0;
-//         padding: 10px;
+    &__disc {
+        margin: 0;
+    }
+}
 
-//         color: $color-black;
-//         text-decoration: none;
-//     }
-// }
+.btn {}
 
-// .form {
-//     &>input {
-//         width: 100%;
-//         color: $color-black;
-//         font-family: Montserrat, $fallback;
-//         font-size: 18px;
-//         font-style: normal;
-//         font-weight: 400;
-//         line-height: 27px;
-//         border: none;
-//         border-bottom: 1px solid $color-steel-blue;
-//         padding: 10px 5px;
-//         margin-bottom: 30px;
-//         background: transparent;
-//     }
-// }
+.form-btn {}
 
-// .form-btn {
-//     width: 140px;
-//     height: 50px;
-//     color: $color-black;
-//     text-transform: uppercase;
-//     background: transparent;
-//     border: 1px solid $color-steel-blue;
-//     float: right;
-// }
+.form {
+
+    &__input {
+        width: 100%;
+        color: $color-black;
+        line-height: 27px;
+        border: none;
+        border-bottom: 1px solid $color-night-blue;
+        padding: 10px 5px;
+        margin-bottom: 30px;
+        background: transparent;
+        margin-bottom: 30px;
+    }
+}
