header_and_other_sections_fixed

--- a/students/savchak_marharyta/exam_1/src/css/_global.scss
+++ b/students/savchak_marharyta/exam_1/src/css/_global.scss
@@ -27,3 +27,48 @@ img {
         display: none !important;
     }
 }
+
+.btn {
+    color: inherit;
+    font-family: $btn-font;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1.12px;
+    // white-space: nowrap;
+    z-index: 100;
+    position: relative;
+}
+
+.btn-wrapper {
+    background-color: $blue;
+    width: 150px;
+    position: relative;
+    z-index: 1;
+}
+
+.btn-wrapper::before {
+    content: " ";
+    background-color: $darker-blue;
+    width: 52%;
+    height: 100%;
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+}
+
+.btn-wrapper::after {
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 31px solid transparent;
+    border-top: 31px solid $blue ;
+    border-right: 31px solid $blue ;
+    border-bottom: 31px solid transparent;
+    z-index: 3;
+    position: absolute;
+    top: 0;
+    left: 24%;
+
+}
