--- a/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
@@ -104,7 +104,7 @@
     padding-bottom: $container-bottom-padding;
 }
 
-.row {
+.heroblock__row {
     // margin: 0 auto;
     display: flex;
     flex-direction: column;
