--- a/students/savchak_marharyta/exam_1/src/css/header/_header.scss
+++ b/students/savchak_marharyta/exam_1/src/css/header/_header.scss
@@ -3,12 +3,12 @@
     // .header__title
 
     &__title {
+        padding-top: 5px;
         text-transform: uppercase;
         color: $white;
         font-size: 24px;
         letter-spacing: 2.4px;
         margin: 0;
-        line-height: 24px;
         font-weight: 700;
         font-family: $logo-font;
     }
@@ -16,6 +16,7 @@
 
 .nav {
     width: 576px;
+    padding-top: 10px;
 }
 
 .menu {
@@ -24,7 +25,6 @@
     justify-content: space-between;
     margin: 0;
     padding: 0;
-    align-items: center;
 
     &__item {}
 
@@ -41,5 +41,5 @@
 .header__container {
     display: flex;
     justify-content: space-between;
-    padding: 34px 0;
+    padding: 25px 0;
 }
